# light_acc_memo

./: .env  .gitignore  Anchor.toml  id.json  package-lock.json  package.json
programs/comp_memo/: Cargo.toml
programs/comp_memo/src/: entrypoint.rs  lib.rs  processor.rs
tests/: comp_memo.ts  test.ts
