[package]
name = "comp_memo"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "comp_memo"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.0"
light-sdk = "0.11.0"
solana-account-info = "2.1.0"
solana-instruction = "2.1.0"
solana-msg = "2.1.0"
solana-program-entrypoint = "2.1.0"
solana-program-error = "2.1.0"
solana-pubkey = "2.1.0"
solana-program = "1.18.22"

light-system-program = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v.1.0.0", version = "1.0.0", features = [
    "no-entrypoint",
] }
light-hasher = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v.1.0.0", version = "1.0.0" }
light-utils = { git = "https://github.com/Lightprotocol/light-protocol.git", tag = "v.1.0.0", version = "1.0.0" }
spl-noop = { version = "0.2.0", features = ["no-entrypoint"] }
getrandom = { version = "0.1.14", features = ["dummy"] }
light-poseidon = "0.2.0" # Anchor compatibility
borsh = "0.10.0"
ark-bn254 = "0.5.0"
[target.'cfg(not(target_os = "solana"))'.dependencies]
solana-sdk = "=1.18.22"
